index.css
/*Colors*/

/*Text*/

@import url('https://fonts.googleapis.com/css2?family=Gabarito&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz@6..12&display=swap');

/*Images*/

/*Animations*/

/*Misc*/
html{
  background-color: green;
  scroll-behavior: smooth;
}


body{
  margin:0;
  padding: 0;
  background-color: black;
}

p{
  color: white;
  font-family: 'Montserrat', sans-serif;
}

h1{
  color: white;
  font-family: 'Montserrat', sans-serif;
}

#landing-page{
  height: 100vh;
  width: 100%;
  background-image: url("images/pexels-temo-berishvili-1574843.jpg");
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.4);
  background-blend-mode: multiply;
}
  
.nav{
  background-color: transparent;
  position: sticky;
  top: 0;
  transition: 0.5s;
  padding: 2%;
}

.nav-got-scrolled{
  background-color: black; 
  border-bottom: 2px solid white;
  padding: 1%;
}

.nav-list{
  margin: 0;
}

.nav-item{
  display: inline-block;
  margin: none;
  padding: 0% 2%;
}

.nav-text{
  color: white;
  font-family: Arial, Helvetica, sans-serif;
  font-size: 1.3em;
  padding: 8px;
  text-decoration: none;
  position: relative;
}

hover-underline {
  display: inline-block;
  position: relative;
  color: white;
  padding: 2%
}

.hover-underline::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  left: 0;
  bottom: 0;
  background-color: white;
  transform-origin: bottom;
  transition: transform 0.25s ease-out;
}

.hover-underline:hover::after {
  transform: scaleX(1);
  transform-origin: bottom;
}

.button-div{
  display: flex;
  align-items: center;
  justify-content: center;
}

.landing-div{
  margin: 5% auto;
  width: 50%;
  padding: 2% 0%;
  border-top: 2px solid white;
  border-bottom: 2px solid white;
  max-height: 100vh;
}

.landing-header{
  color: white;
  font-family: 'Gabarito', sans-serif;
  text-align: center;
  font-size: 3em;
}

.landing-info{
  color: white;
  font-family: 'Nunito Sans', sans-serif;
  text-align: center;
  width: 50%;
  margin: auto;
}

button{
  border: none;
  background: transparent;
  font-family: 'Montserrat', sans-serif;  
}

.landing-button-link{
  border-radius: 10px;
  background-color: white;
  font-family: 'Montserrat', sans-serif;  
  font-weight: bold;
  border: none;
  text-align: center;
  margin: 2%;
  padding: 1% 2%;
  transition: 0.5s;
}

.landing-button-link:hover {
  background-color: lightgreen;
}

#purpose-heading{
  font-family: 'Montserrat', sans-serif;
  text-align: center;
  margin: 10% auto;
  font-size: 2.3em
}

.para{
  padding: 5%;
  margin: 0;
  padding-top: 0;
}

.flex-container{
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 2%;
}

.flex-div-left{
  width: 40%;
  margin: 2%;
}

.flex-div-right{
  width: 40%;
  margin: 2%;
}

.flex-img{
  width: 100%;
  border-top: 2px solid white;
  border-bottom: 2px solid white;
  border-left: 2px solid white;
}

.flex-img-bottom{
  width: 80%;
  float: right;
  z-index: -1;
  margin-top: -80%;
  border-right: 2px solid white;
}

.hidden {
  opacity: 0;
  transition: all 1s;
  filter: blur(5px);
  transform: translateX(-100%);
}

.hidden-right {
  opacity: 0;
  transition: all 1s;
  filter: blur(5px);
  transform: translateX(100%);
  transition-delay: 200ms;
  z-index: -1;
}

.show {
  opacity: 1;
  filter: blur(0);
  transform: translateX(0);
}

@media(prefers-reduced-motion) {
  .hidden {
    transition: none;
  }
}

